--- a/Secure Mobile Communication/res/layout/join.xml
+++ b/Secure Mobile Communication/res/layout/join.xml
@@ -3,15 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <Button
-    	android:layout_marginTop="10dp"
-        android:textColor="#FFF"
-        android:layout_width="170dp"
-        android:layout_height="45dp"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/join_request" 
-        android:onClick="onJoin"
-        />
+        android:orientation="vertical" >
+
+        <EditText
+            android:id="@+id/phoneText"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:ems="10"
+            android:hint="@string/phone_hint" />
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+    		android:layout_height="wrap_content" >
     
+	    <Button
+	    	android:layout_marginTop="10dp"
+	        android:textColor="#FFF"
+	        android:layout_width="170dp"
+	        android:layout_height="45dp"
+	        android:layout_centerInParent="true"
+	        android:text="@string/join_request" 
+	        android:onClick="onJoin"
+	        />
+	    </RelativeLayout>
+	    
+    </LinearLayout>
 
 </RelativeLayout>
