--- a/Secure Mobile Communication/res/layout/onetime_password_input.xml
+++ b/Secure Mobile Communication/res/layout/onetime_password_input.xml
@@ -10,6 +10,7 @@
         android:orientation="vertical" >
 
         <EditText
+            android:id="@+id/passwordText"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:ems="10"
