Fixed server communication.

--- a/Secure Mobile Communication/res/layout/onetime_password_input.xml
+++ b/Secure Mobile Communication/res/layout/onetime_password_input.xml
@@ -7,7 +7,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="vertical" >
+        android:orientation="vertical" android:id="@+id/linearLayout">
 
         <EditText
             android:id="@+id/passwordText"
@@ -32,7 +32,19 @@
         </RelativeLayout>
 
     </LinearLayout>
-    
-    
+	<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:text="One-time pass"
+			android:id="@+id/textView" android:layout_above="@+id/linearLayout" android:layout_alignParentLeft="true"
+			android:layout_alignParentStart="true"/>
+	<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="The server conveyed a password to you, please enter it"
+			android:id="@+id/textView2" android:layout_above="@+id/textView" android:layout_alignParentLeft="true"
+			android:layout_alignParentStart="true"/>
+
 
 </RelativeLayout>
