--- a/Secure Mobile Communication/res/layout/join.xml
+++ b/Secure Mobile Communication/res/layout/join.xml
@@ -7,7 +7,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="vertical" >
+        android:orientation="vertical" android:id="@+id/linearLayout">
 
         <EditText
             android:id="@+id/phoneText"
@@ -27,10 +27,17 @@
 	        android:layout_height="45dp"
 	        android:layout_centerInParent="true"
 	        android:text="@string/join_request" 
-	        android:onClick="onJoin"
+	        android:onClick="onClick"
 	        />
 	    </RelativeLayout>
 	    
     </LinearLayout>
+	<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:text="Please enter your phone number"
+			android:id="@+id/textView" android:layout_above="@+id/linearLayout" android:layout_alignParentLeft="true"
+			android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
