--- a/Secure Mobile Communication/res/layout/send_message.xml
+++ b/Secure Mobile Communication/res/layout/send_message.xml
@@ -16,7 +16,7 @@
                 android:id="@+id/reciverTextVeiw"
                 android:layout_width="wrap_content"
     			android:layout_height="wrap_content"
-                android:text="@string/reciver"/>
+                android:text="@string/receiver"/>
             
              <Spinner
         		android:id="@+id/phoneList"
